--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,7 @@ footer{
     background-color: #151414;
     width: 1600px;
     height: 577px;
+    margin-left:  0px;
 }
 #footer{
     display: flex;
